--- a/src/App.css
+++ b/src/App.css
@@ -381,3 +381,32 @@ h1 > .five,
 .ten {
   color: palevioletred;
 }
+
+.d-flex {
+  display: flex;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.align-items {
+  align-items: center;
+}
+
+.form-input {
+  color: white !important;
+  padding: 5px;
+  font-size: 20px !important;
+}
+
+#form-image-display {
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+}
+
