--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "Rubik Bubbles";
-  src: local("Rubik Bubbles"),
+  src:
+    local("Rubik Bubbles"),
     url("./fonts/RubikBubbles-Regular.ttf") format("truetype");
   font-weight: regular;
 }
@@ -312,8 +313,14 @@ body {
   color: rgba(0, 0, 0, 0.85);
   cursor: pointer;
   display: inline-flex;
-  font-family: system-ui, -apple-system, system-ui, "Helvetica Neue", Helvetica,
-    Arial, sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    system-ui,
+    "Helvetica Neue",
+    Helvetica,
+    Arial,
+    sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
@@ -409,4 +416,3 @@ h1 > .five,
   width: 50px;
   height: 50px;
 }
-
