Refactor getAllDogs api method

--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ body {
 #create-dog-form input[type="submit"] {
   margin-top: 20px;
   color: black;
+  cursor: pointer;
 }
 
 #create-dog-form input {
